Allow general access to samba
121ae281853d7f4efc74141f93afcb62edd1963d was a bit too strict, some devices that aren't trusted should be allowed to access SMB.

--- a/inventory/host_vars/theia/samba.yml
+++ b/inventory/host_vars/theia/samba.yml
@@ -1,6 +1,6 @@
 ---
 
-samba_hosts_allow: "{{ ['127.0.0.1'] + firewall_trusted_sources }}"
+samba_hosts_allow: "{{ ['127.0.0.1'] + [all_net.general.cidr] + subnets.mt.trusted }}"
 
 samba_interfaces:
   - lo
