Upgrade to PostgreSQL 16

--- a/inventory/group_vars/kvm_hv/fedora.yml
+++ b/inventory/group_vars/kvm_hv/fedora.yml
@@ -36,7 +36,7 @@ __group_dnf_packages:
   - pciutils
   - pkgconf
   - policycoreutils-python-utils
-  - postgresql
+  - postgresql16
   - powertop
   - python3-dnf-plugin-versionlock
   - python3-lxml  # virt ansible modules
