Remove Thanos, increase Prometheus retention to 5 years
It was mostly a pain in the backside, randomly deciding to use 200GB+ only to decrease back down to ~30GB.

Reduce minio to 50GB, most of the usage was Thanos.

--- a/inventory/group_vars/prom_common/prometheus.yml
+++ b/inventory/group_vars/prom_common/prometheus.yml
@@ -9,7 +9,7 @@ __prom_node_ips: >-
 
 prometheus_version: latest
 prometheus_port: 9090
-prometheus_storage_retention: "365d"
+prometheus_storage_retention: "5y"
 prometheus_web_listen_address: "{{ wireguard_ip | default('0.0.0.0') }}:{{ prometheus_port }}"
 prometheus_web_external_url: "http://{{ wireguard_ip | default(ansible_host) }}:{{ prometheus_port }}"
 prometheus_global:
