--- a/inventory/host_vars/theia/btrbk.yml
+++ b/inventory/host_vars/theia/btrbk.yml
@@ -9,6 +9,10 @@ btrbk_volumes_host:
         options:
           snapshot_name: "home"
 
+      - path: "@/mnt/containers"
+        options:
+          snapshot_name: "containers"
+
   - path: "/mnt/tank"
     options:
       snapshot_dir: ".snapshots"
