--- a/inventory/host_vars/theia/vars.yml
+++ b/inventory/host_vars/theia/vars.yml
@@ -34,3 +34,5 @@ ceph_mon: false
 intel_gvt_enabled: false
 
 prometheus_ignore_down: false
+
+syncthing_gui_listen_address: "{{ host_ips.general }}:8384"
