Run borg compact after pruning, append only backups to syno

--- a/inventory/host_vars/theia/borg.yml
+++ b/inventory/host_vars/theia/borg.yml
@@ -53,6 +53,9 @@ borg_backups:
       - "."
     create_args:
       - "--exclude '**/.snapshots'"
+    # Manually add to Task Scheduler
+    # /usr/local/bin/borg compact /volume1/backup/borg/theia/tank > /volume1/backup/borg/compact-$(date +%Y%m%d).log
+    append_only: true
     prune_args:
       - "--keep-weekly 2"
       - "--keep-monthly 3"
