--- a/roles/borg/tasks/configure_target.yml
+++ b/roles/borg/tasks/configure_target.yml
@@ -40,6 +40,6 @@
     ssh_dest_group: "{{ hostvars[conf.target_host].borg_group | default(borg_user) }}"
     ssh_key_options: >-
       command="cd {{ target_path }};{{ hostvars[conf.target_host].borg_serve_bin | default(borg_serve_bin) }}
-      serve --restrict-to-path {{ target_path }}",restrict
+      serve {% if conf.append_only | default(false) %}--append-only {% endif %}--restrict-to-path {{ target_path }}",restrict
   when: conf.configure_ssh | default(borg_configure_ssh)
   tags: ["auto-ssh"]
