--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -35,7 +35,7 @@ home_net:
     mt_lists:
       - LAN
       - NOSEC
-    dhcp_range: 10.0.10.240/28
+    dhcp_range: 10.0.10.240-10.0.10.254
     domain: vm.{{ domains['hb'] }}
   kube:
     cidr: 10.0.27.0/24
@@ -44,7 +44,7 @@ home_net:
     mt_lists:
       - LAN
       - NOSEC
-    dhcp_range: 10.0.27.240/28
+    dhcp_range: 10.0.27.240-10.0.27.254
     domain: kube.{{ domains['hb'] }}
   talos:
     cidr: 10.0.28.0/24
@@ -53,7 +53,7 @@ home_net:
     mt_lists:
       - LAN
       - NOSEC
-    dhcp_range: 10.0.28.240/28
+    dhcp_range: 10.0.28.240-10.0.28.254
     domain: talos.{{ domains['hb'] }}
   general:
     cidr: 10.0.50.0/24
@@ -62,7 +62,7 @@ home_net:
       - LAN
       - NOSEC
     upnp: true
-    dhcp_range: 10.0.50.128/25
+    dhcp_range: 10.0.50.128-10.0.50.254
     domain: gen.{{ domains['hb'] }}
   public:
     cidr: 10.0.55.0/24
@@ -71,7 +71,7 @@ home_net:
       - LAN
       - NOSEC
     upnp: true
-    dhcp_range: 10.0.55.128/25
+    dhcp_range: 10.0.55.128-10.0.55.254
     domain: pub.{{ domains['hb'] }}
 
 internal_net:
@@ -81,7 +81,7 @@ internal_net:
     mt_lists:
       - LAN
       - SEC
-    dhcp_range: 10.0.100.128/25
+    dhcp_range: 10.0.100.128-10.0.100.254
     domain: man.{{ domains['hb'] }}
   san:
     cidr: 10.0.2.0/24
