--- a/roles/systemd_networkd/handlers/main.yml
+++ b/roles/systemd_networkd/handlers/main.yml
@@ -6,6 +6,7 @@
     state: restarted
   when:
     - not chroot_path
+    - networkd_service_enabled
     - networkd_restart | bool
 
 - name: Restart systemd-resolved
@@ -13,6 +14,7 @@
     name: systemd-resolved.service
     state: restarted
   when:
+    - resolved_service_enabled
     - not chroot_path
 
 - name: Start WireGuard interface
