--- a/inventory/group_vars/loki/loki.yml
+++ b/inventory/group_vars/loki/loki.yml
@@ -9,10 +9,29 @@ loki_alert_rules_files:
 loki_extra_config:
   compactor:
     retention_enabled: true
-    deletion_mode: filter-and-delete
     delete_request_cancel_period: 15m
+    delete_request_store: filesystem
   limits_config:
+    # TODO: Remove after new schema is in use
+    allow_structured_metadata: false
+    deletion_mode: filter-and-delete
     retention_period: 365d
   query_range:
     # https://github.com/grafana/loki/issues/4613#issuecomment-1021421653
     parallelise_shardable_queries: false
+
+loki_schema_configs:
+  - from: 2020-10-24
+    store: boltdb-shipper
+    object_store: filesystem
+    schema: v11
+    index:
+      prefix: index_
+      period: 24h
+  - from: 2024-04-23
+    store: tsdb
+    object_store: filesystem
+    schema: v13
+    index:
+      prefix: index_
+      period: 24h
