Node exporter updates
- Version 1.8.0
- Exclude ARP from romgw01 and webgw01

--- a/inventory/host_vars/romgw01/vars.yml
+++ b/inventory/host_vars/romgw01/vars.yml
@@ -20,3 +20,11 @@ networkd_config:
 
 host_nic_names:
   - enp1s0
+
+node_exporter_no_collectors:
+  - mdadm
+  - zfs
+  - xfs
+  - bcache
+  - textfile
+  - arp
