--- a/roles/cpupower/handlers/main.yml
+++ b/roles/cpupower/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: Reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: true
+
 - name: Restart cpupower service
   ansible.builtin.systemd:
     name: cpupower.service
