[auto_ssh] Sort entries in /etc/hosts

--- a/roles/auto_ssh/tasks/known_hosts.yml
+++ b/roles/auto_ssh/tasks/known_hosts.yml
@@ -51,7 +51,7 @@
     path: /etc/hosts
     marker: "# {mark} {{ ssh_hosts_comment }}"
     block: |
-      {% for h in ssh_dest_hosts %}
+      {% for h in ssh_dest_hosts | sort %}
       {{ hostvars[h].ansible_host }} {{ hostvars[h].ssh_conf_hosts_names | default(hostvars[h].__target_host_names | difference([hostvars[h].ansible_host])) | unique | join(' ') }}
       {% endfor %}
   when: ssh_conf_hosts | bool
