--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -81,6 +81,7 @@ base_pacman_packages:
   - net-tools
   - nextcloud-client
   - noto-fonts
+  - noto-fonts-cjk
   - noto-fonts-emoji
   - ntfs-3g
   - openssh
@@ -114,9 +115,11 @@ base_pacman_packages:
   - sshpass
   - sudo
   - systemd-resolvconf  # Required by Wireguard
+  - tcpdump
   - texinfo
   - tk  # Required by pyenv to compile Python
   - tmux
+  - traceroute
   - ttf-fira-code
   - ttf-font-awesome
   - ttf-nerd-fonts-symbols-2048-em
@@ -155,7 +158,7 @@ pacman_i3_packages:
   - gvfs-mtp
   - gvfs-nfs
   - gvfs-smb
-  - i3-gaps
+  - i3-wm
   - lxappearance
   - numlockx
   - pamixer
