--- a/inventory/group_vars/webgw/nginx/vhosts.yml
+++ b/inventory/group_vars/webgw/nginx/vhosts.yml
@@ -12,6 +12,10 @@ __nginx_vhosts_3:
     server_name: default_reject
     template: "{{ repo_base_dir }}/files/webgw/nginx/default_reject.conf.j2"
 
+  - filename: status.conf
+    server_name: status
+    template: "{{ repo_base_dir }}/roles/nginx_exporter/templates/status.conf.j2"
+
   - filename: gitlab.conf
     server_name: gitlab
     template: "{{ repo_base_dir }}/files/webgw/nginx/gitlab.conf.j2"
