--- a/inventory/group_vars/webgw/nginx_exporter.yml
+++ b/inventory/group_vars/webgw/nginx_exporter.yml
@@ -2,3 +2,4 @@
 
 nginx_exporter_port: "9113"
 nginx_exporter_web_listen_address: "{{ wireguard_ip | default('0.0.0.0') }}:{{ nginx_exporter_port }}"
+nginx_exporter_install_conf: false
